test/classes/initializers/phase1/grandparentAccess.good
grandparentAccess.chpl:21: In initializer:
grandparentAccess.chpl:24: error: cannot access parent field "a" before super.init() or this.init()
